Moves setenv.sh configuration from entripoint.sh to Dockerfile